fixed logo container being too big in mobile view

--- a/styles.css
+++ b/styles.css
@@ -97,11 +97,11 @@ nav .btn {
 
 .logo {
   float: left;
-  width: 65%;
+  width: 50%;
 }
 
 .logo img {
-  width: 45%;
+  width: 65%;
 }
 
 nav button {
